--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 
 <html>
 	<head>
@@ -132,7 +132,7 @@
 						</tr>
 						</tbody>
 						<tfoot>
-							<td colspan="3"> <a href="https://www.twitter.com/iraqooh" id="twitter"> Twitter: @iraqooh </a> </td>
+							<td colspan="3" align="center"> <a href="https://www.twitter.com/iraqooh" id="twitter"> Twitter: @iraqooh </a> </td>
 						</tfoot>
 					</table>
 				</td>
