--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 			<!--This row is for the header section-->
 			<tr>
 				<!--Setting the web page main heading to a preformatted text-->
-				<td> <pre> <h1><a href="harry.html"> Iraku Harry </a></h1> </pre>
+				<td> <pre> <h1><a href=".html"> Iraku Harry </a></h1> </pre>
 				</td>
 		 		<!--Adding an image banner to the top of the web page-->
 				<td colspan="2"> <img src="images/compile.jpg" width="100%" height="22%" alt="banner"> </td>
 				<td align="right"> 
 					<!--Adding a search box and an image button to the top right corner of the web page-->
 					<form> 
-					<input type="search" method="get" action="harry.html" size="20">
+					<input type="search" method="get" size="20">
 					<button> <img src="images/search.png" width="15" height="15" alt="Search"> </button>
 					</form>
 				</td>
@@ -47,7 +47,7 @@
 				<td rowspan="3" valign="top" width="300" background="images/pane.jpg">
 					<!--Adding a navigation list for the website at the top left side of the landing page-->
 					<ul font = "white">
-					<li> <a href="harry.html"> Home </a> </li>
+					<li> <a href="https://iraqooh.github.io/irakuharry/"> Home </a> </li>
 					<li> <a href="hobbies.html" target="_blank"> Hobbies & Interests </a> </li>
 					<li> <a href="#form"> Contact </a> </li>
 					<li> <a href="#iframe"> Page Info </a> </li>
