--- a/hobbies.html
+++ b/hobbies.html
@@ -15,7 +15,7 @@
 	<body bgcolor="#dcdcdc">
 
 	<!--This hyperlink text returns the visitor back to the home page-->
-	<nav> <a href="harry.html"> Home </a> </nav>
+	<nav> <a href="https://iraqooh.github.io/irakuharry/"> Home </a> </nav>
 
 	<!--This table creates the layout of this web page, it is a 2 column by 8 row layout-->
 	<table align="center" cellpadding="25">
@@ -48,7 +48,7 @@
 	<td> <img src="images/volleyball.jpg" alt="Playing Volleyball" width="360" height="240"> <p align="center"> Playing Volleyball </p> </td>
 	</tr>
 	<tr>
-	<td align="center"> <a href=harry.html> Home </a> </td>
+	<td align="center"> <a href="https://iraqooh.github.io/irakuharry/"> Home </a> </td>
 	
 	<td align="center"> <a href=#top> Top </a> </td>
 	</tr>
