--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<!--This row is for the header section-->
 			<tr>
 				<!--Setting the web page main heading to a preformatted text-->
-				<td> <pre> <h1><a href=".html"> Iraku Harry </a></h1> </pre>
+				<td> <pre> <h1><a href="https://iraqooh.github.io/irakuharry/"> Iraku Harry </a></h1> </pre>
 				</td>
 		 		<!--Adding an image banner to the top of the web page-->
 				<td colspan="2"> <img src="images/compile.jpg" width="100%" height="22%" alt="banner"> </td>
