--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 
 <html>
 	<head>
@@ -37,7 +37,7 @@
 				<td align="right"> 
 					<!--Adding a search box and an image button to the top right corner of the web page-->
 					<form> 
-					<input type="search" method="get" size="20">
+					<input type="search" method="get" action="harry.html" size="20">
 					<button> <img src="images/search.png" width="15" height="15" alt="Search"> </button>
 					</form>
 				</td>
