--- a/hobbies.html
+++ b/hobbies.html
@@ -28,7 +28,7 @@
 	</tr>
 	<!--Adding the images, setting their sizes to the same dimensions and adding a caption below each image-->
 	<tr>
-	<td> <img src="images/cook.jpg" alt="Cooking at Home" width="360" height="240" id="chef"> <p align="center"> Cooking at Home </p> </td>
+	<td> <img src="cook.jpg" alt="Cooking at Home" width="360" height="240" id="chef"> <p align="center"> Cooking at Home </p> </td>
 	<td> <img src="images/guitar.jpg" alt="Playing the Electric Guitar" width="360" height="240"> <p align="center"> Practicing the Electric Guitar </p> </td>
 	</tr>
 	<tr>
