--- a/hobbies.html
+++ b/hobbies.html
@@ -28,24 +28,24 @@
 	</tr>
 	<!--Adding the images, setting their sizes to the same dimensions and adding a caption below each image-->
 	<tr>
-	<td> <img src="/images/cook.jpg" alt="Cooking at Home" width="360" height="240" id="chef"> <p align="center"> Cooking at Home </p> </td>
-	<td> <img src="images/guitar.jpg" alt="Playing the Electric Guitar" width="360" height="240"> <p align="center"> Practicing the Electric Guitar </p> </td>
+	<td> <img src="cook.JPG" alt="Cooking at Home" width="360" height="240" id="chef"> <p align="center"> Cooking at Home </p> </td>
+	<td> <img src="guitar.JPG" alt="Playing the Electric Guitar" width="360" height="240"> <p align="center"> Practicing the Electric Guitar </p> </td>
 	</tr>
 	<tr>
-	<td> <img src="images/friends.jpg" alt="Hanging out with Friends" width="360" height="240"> <p align="center"> Hanging out with Friends </p> </td>
-	<td> <img src="images/beach.jpg" alt="Partying at the Beach" width="360" height="240"> <p align="center"> At a Party </p> </td>
+	<td> <img src="friends.JPG" alt="Hanging out with Friends" width="360" height="240"> <p align="center"> Hanging out with Friends </p> </td>
+	<td> <img src="beach.jpg" alt="Partying at the Beach" width="360" height="240"> <p align="center"> At a Party </p> </td>
 	</tr>
 	<tr>
-	<td> <img src="images/explore.jpg" alt="Visiting a Factory" width="360" height="240"> <p align="center"> Visiting a Factory </p> </td>
-	<td> <img src="images/explore2.jpg" alt="Exploring Kasese" width="360" height="240"> <p align="center"> Exploring Kasese </p> </td>
+	<td> <img src="explore.JPG" alt="Visiting a Factory" width="360" height="240"> <p align="center"> Visiting a Factory </p> </td>
+	<td> <img src="explore2.JPG" alt="Exploring Kasese" width="360" height="240"> <p align="center"> Exploring Kasese </p> </td>
 	</tr>
 	<tr>
-	<td> <img src="images/music.jpg" alt="Listening to Music at Home" width="360" height="240"> <p align="center"> Listening to Music </p> </td>
-	<td> <img src="images/drinks.jpg" alt="Having a Drink" width="360" height="240"> <p align="center"> Having Drinks </p> </td>
+	<td> <img src="music.JPG" alt="Listening to Music at Home" width="360" height="240"> <p align="center"> Listening to Music </p> </td>
+	<td> <img src="drinks.JPG" alt="Having a Drink" width="360" height="240"> <p align="center"> Having Drinks </p> </td>
 	</tr>
 	<tr>
-	<td> <img src="images/bridge.jpg" alt="Exploring Jinja" width="360" height="240"> <p align="center"> On the Jinja Nile Bridge </p> </td>
-	<td> <img src="images/volleyball.jpg" alt="Playing Volleyball" width="360" height="240"> <p align="center"> Playing Volleyball </p> </td>
+	<td> <img src="bridge.JPG" alt="Exploring Jinja" width="360" height="240"> <p align="center"> On the Jinja Nile Bridge </p> </td>
+	<td> <img src="volleyball.JPG" alt="Playing Volleyball" width="360" height="240"> <p align="center"> Playing Volleyball </p> </td>
 	</tr>
 	<tr>
 	<td align="center"> <a href="https://iraqooh.github.io/irakuharry/"> Home </a> </td>
