--- a/hobbies.html
+++ b/hobbies.html
@@ -4,57 +4,58 @@
 	<head>
 	<title>Hobbies & Interests</title>
 
-	<meta charset="utf-8"/> 
+	<meta charset="utf-8"/>
 	<meta name="author" content="Iraku Harry"/>
 	<meta name="keywords" content="Iraku Harry, Bio, Contact, Resume"/>
 	<meta name="description" content="A brief biography of Makerere University Software Engineering Student, Iraku Harry"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="stylesheet" href="generic.css">
 	</head>
 
-	<!--Setting the background color of the entire web page-->
-	<body bgcolor="#dcdcdc">
+	<body>
 
 	<!--This hyperlink text returns the visitor back to the home page-->
-	<nav> <a href="https://iraqooh.github.io/irakuharry/"> Home </a> </nav>
-
-	<!--This table creates the layout of this web page, it is a 2 column by 8 row layout-->
-	<table align="center" cellpadding="25">
-
-	<tr>
-		<!--Heading of the web page, merges 2 cells of this row-->
-		<td colspan="2" align="center">
-			<h1 id="top"> Hobbies & Interests </h1>
-		</td>
-	</tr>
-	<!--Adding the images, setting their sizes to the same dimensions and adding a caption below each image-->
-	<tr>
-	<td> <img src="images/cook.JPG" alt="Cooking at Home" width="360" height="240" id="chef"> <p align="center"> Cooking at Home </p> </td>
-	<td> <img src="images/guitar.JPG" alt="Playing the Electric Guitar" width="360" height="240"> <p align="center"> Practicing the Electric Guitar </p> </td>
-	</tr>
-	<tr>
-	<td> <img src="images/friends.JPG" alt="Hanging out with Friends" width="360" height="240"> <p align="center"> Hanging out with Friends </p> </td>
-	<td> <img src="images/beach.jpg" alt="Partying at the Beach" width="360" height="240"> <p align="center"> At a Party </p> </td>
-	</tr>
-	<tr>
-	<td> <img src="images/explore.JPG" alt="Visiting a Factory" width="360" height="240"> <p align="center"> Visiting a Factory </p> </td>
-	<td> <img src="images/explore2.JPG" alt="Exploring Kasese" width="360" height="240"> <p align="center"> Exploring Kasese </p> </td>
-	</tr>
-	<tr>
-	<td> <img src="images/music.JPG" alt="Listening to Music at Home" width="360" height="240"> <p align="center"> Listening to Music </p> </td>
-	<td> <img src="images/drinks.JPG" alt="Having a Drink" width="360" height="240"> <p align="center"> Having Drinks </p> </td>
-	</tr>
-	<tr>
-	<td> <img src="images/bridge.JPG" alt="Exploring Jinja" width="360" height="240"> <p align="center"> On the Jinja Nile Bridge </p> </td>
-	<td> <img src="images/volleyball.JPG" alt="Playing Volleyball" width="360" height="240"> <p align="center"> Playing Volleyball </p> </td>
-	</tr>
-	<tr>
-	<td align="center"> <a href="https://iraqooh.github.io/irakuharry/"> Home </a> </td>
-	
-	<td align="center"> <a href=#top> Top </a> </td>
-	</tr>
-	<tr>
-		<td colspan="2" align="center" > &copy; Iraku Harry, <a href="https://www.mak.ac.ug">Makerere University </a> </td>
-	</tr>
-	</table>
+	<div class="container">
+		<div class="navigation">
+			<ul>
+				<li> <a href="https://iraqooh.github.io/irakuharry/aboutme.html"> Home </a> </li>
+				<li> <a href="https://iraqooh.github.io/irakuharry/hobbies.html" target="_blank"> Hobbies </a> </li>
+				<li> <a href="https://iraqooh.github.io/irakuharry/contactform.html"> Contact </a> </li>
+				<li> <a href="https://iraqooh.github.io/irakuharry/documentation.html"> Documentation </a> </li>
+			</ul>
+		</div>
+		<div class="header">
+				<h1> Hobbies & Interests </h1>
+		</div>
+		<div class="section">
+							<div class="image">
+								<img src="images/cook.JPG" alt="Cooking at Home" width="360" height="240" id="chef"> <p align="center"> Cooking at Home </p>
+							</div>
+							<div class="image">
+								<img src="images/guitar.JPG" alt="Playing the Electric Guitar" width="360" height="240"> <p align="center"> Practicing the Electric Guitar </p>
+							</div>
+							<div class="image">
+								<img src="images/explore.JPG" alt="Visiting a Factory" width="360" height="240"> <p align="center"> Visiting a Factory </p>
+					 		</div>
+					 		<div class="image">
+					 			<img src="images/explore2.JPG" alt="Exploring Kasese" width="360" height="240"> <p align="center"> Exploring Kasese </p>
+					 		</div>
+							<div class="image">
+					 			<img src="images/music.JPG" alt="Listening to Music at Home" width="360" height="240"> <p align="center"> Listening to Music </p>
+					 		</div>
+					 		<div class="image">
+				 				<img src="images/drinks.JPG" alt="Having a Drink" width="360" height="240"> <p align="center"> Having Drinks </p>
+				 			</div>
+							<div class="image">
+								<img src="images/bridge.JPG" alt="Exploring Jinja" width="360" height="240"> <p align="center"> On the Jinja Nile Bridge </p>
+							</div>
+							<div class="image">
+				 				<img src="images/volleyball.JPG" alt="Playing Volleyball" width="360" height="240"> <p align="center"> Playing Volleyball </p>
+				 			</div>
+		</div>
+		<div class="footer">
+			<p> &copy; Iraku Harry, <a href="https://www.mak.ac.ug">Makerere University </a> </p>
+		</div>
+	</div>
 	</body>
 </html>
