--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </a>
     <a href="https://iraqooh.github.io/irakuharry/hobbies.html">
       <div class="photo">
-        <img src="D:/BSSE/BSE 1207 Introduction to Web Development/WWW/images/hiraku2.png" alt="pie" width="130px">
+        <img src="images/hiraku2.png" alt="pie" width="130px">
         <h2 id="myphotos">My Photos</h2>
       </div>
       </a>
