--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2 id="myphotos">My Photos</h2>
       </div>
       </a>
-      <a href="skills.html">
+      <a href="https://iraqooh.github.io/irakuharry/education.html">
       <div class="educ">
         <h2>Education History</h2>
       </div>
