--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-	<title>Contact Me</title>
+	<title>Education History</title>
 
 	<meta charset="utf-8"/>
 	<meta name="author" content="Iraku Harry"/>
