--- a/documentation.html
+++ b/documentation.html
@@ -19,6 +19,7 @@
 			<!--List of navigation hyperlinks for this website-->
 			<ul>
 				<li> <a href="https://iraqooh.github.io/irakuharry/aboutme.html"> Home </a> </li>
+				<li> <a href="https://iraqooh.github.io/irakuharry/education.html"> Education </a> </li>
 				<li> <a href="https://iraqooh.github.io/irakuharry/hobbies.html" target="_blank"> Hobbies </a> </li>
 				<li> <a href="https://iraqooh.github.io/irakuharry/contactform.html"> Contact </a> </li>
 				<li> <a href="https://iraqooh.github.io/irakuharry/documentation.html"> Documentation </a> </li>
