--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="Iraku Harry"/>
+		<meta name="keywords" content="Iraku Harry, Bio, Contact, Resume"/>
+		<meta name="description" content="A brief biography of Makerere University Software Engineering Student, Iraku Harry"/>
+		<meta name="revised" content="November 3, 2022"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Welcome</title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
