--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="revised" content="November 3, 2022"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome</title>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   </head>
   <body>
@@ -151,6 +151,6 @@
       </div>
     </footer>
 
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
   </body>
 </html>
