--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-secondary">
               <div class="card-body text-center text-light">
-                <img src="images/java.PNG" alt="java" class="img-thumbnail rounded-circle mb-3">
+                <img src="images/java.png" alt="java" class="img-thumbnail rounded-circle mb-3">
                 <h3 class="card-title mb-3">Java</h3>
                 <p class="card-text">
                   <a href="#" class="text-decoration-none text-reset">Java custom package to implement common 
@@ -85,7 +85,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-secondary">
               <div class="card-body text-center text-light">
-                <img src="images/ai.JPG" alt="java" class="img-thumbnail rounded-circle mb-3">
+                <img src="images/ai.jpg" alt="java" class="img-thumbnail rounded-circle mb-3">
                 <h3 class="card-title mb-3">Artificial Intelligence</h3>
                 <p class="card-text">
                   <a href="#" class="text-decoration-none text-reset">Using machine learning
@@ -99,7 +99,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-secondary">
               <div class="card-body text-center text-light">
-                <img src="images/languages.PNG" alt="java" class="img-thumbnail rounded-circle mb-3">
+                <img src="images/languages.png" alt="java" class="img-thumbnail rounded-circle mb-3">
                 <h4 class="card-title mb-3">Programming Dictionary</h4>
                 <p class="card-text">
                   <a href="#" class="text-decoration-none text-reset">A compilation of code snippets from 
@@ -113,7 +113,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-secondary">
               <div class="card-body text-center text-light">
-                <img src="images/calculator.PNG" alt="java" class="img-thumbnail rounded-circle mb-3">
+                <img src="images/calculator.png" alt="java" class="img-thumbnail rounded-circle mb-3">
                 <h3 class="card-title mb-3">Calculator</h3>
                 <p class="card-text">
                   <a href="#" class="text-decoration-none text-reset">A universal calculator for 
