--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <p class="lead">Copyright &copy; 2022 Iraku Harry</p>
 
-        <a href="" class="position-absolute bottom-0 end-0 p-2">
+        <a href="#" class="position-absolute bottom-0 end-0 p-2">
           <i class="bi bi-arrow-up-circle h1 text-light"></i>
         </a>
       </div>
