--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h4 class="card-title mb-3">Programming Dictionary</h4>
                 <p class="card-text">
                   <a href="#" class="text-decoration-none text-reset">A compilation of code snippets from 
-                    the most common programming languages from C to SQL, grouped by 
+                    the most common programming languages, from C to SQL, grouped by 
                     usage.</a>
                 </p>
               </div>
