--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="p-5">
           <h1>Hi, I'm Harry</h1>
           <p class="lead">
-            Sophomore student of Software Engineering at the School of Computing and
+            Third year student of Software Engineering at the School of Computing and
             Information Technology, College of Computing and Information 
             Sciences, Makerere University, Kampala, Uganda.
           </p>
