--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="revised" content="November 3, 2022"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome</title>
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   </head>
